Responsive Design: Soporte para tabletas

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Allerta|Montserrat:400,700" rel="stylesheet">
   <link rel="stylesheet" href="css/app.css">
+  <!-- <link rel="stylesheet" media="(max-width: 800px)" href="css/media-querie.css"> -->
   <title>Invie - tus mejores guitarras!!</title>
 </head>
 <body>
@@ -89,7 +90,7 @@
         </div>
         <div class="col-2">
           <label for="comentarios">Comentarios</label>
-          <textarea name="comentarios" id="comentarios" cols="30" rows="7"></textarea>
+          <textarea name="comentarios" id="comentarios" cols="24" rows="7"></textarea>
           <input type="submit" name="" value="Enviar" class="boton">
         </div>
       </form>
