--- a/index.html
+++ b/index.html
@@ -103,13 +103,33 @@
   </footer>
 
   <script type="text/javascript">
+
+    // Mediante js comprobamos el ancho máximo de la ventana
+    var consulta = window.matchMedia('(max-width: 500px)');
+
     var $burgerButton = document.getElementById('burger-button');
     var $menu = document.getElementById('menu');
-
-    $burgerButton.addEventListener('touchstart', toggleMenu);
     function toggleMenu(){
       $menu.classList.toggle('active');
     };
+
+    // Escucha cuando hay cambios en la ventana (resize) y ejecuta la función
+    consulta.addListener(mediaQuery);
+    // De esta forma si estamos en anchos menores de 500
+    function mediaQuery(){
+      if (consulta.matches){
+        $burgerButton.addEventListener('touchstart', toggleMenu);
+      }else{
+        $burgerButton.removeEventListener('touchstart', toggleMenu);
+      }
+    }
+
+
+
+    // Para que se ejecute la función también al cargar la página
+    mediaQuery();
+
+
   </script>
 
 </body>
