--- a/precios.html
+++ b/precios.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <title>Precios de tus mejores guitarras!!</title>
 </head>
-<body>
+<body class="precios">
   <div class="background">
     <header id="header" class="header contenedor">
       <figure class="logotipo">
