--- a/precios.html
+++ b/precios.html
@@ -27,8 +27,8 @@
   </div>
 
   <!-- Tabla de precios -->
-  <div class="contenedor">
-    <section class="tabla">
+  <section class="tabla">
+    <div class="contenedor">
       <table>
         <tr>
           <th>Modelo</th>
@@ -51,8 +51,9 @@
           <td>Unaguitarra</td>
         </tr>
       </table>
-    </section>
-  </div>
+    </div>
+  </section>
+
 
 
   <!-- Footer -->
@@ -91,6 +92,8 @@
 
   <!-- Cargamos el js de bylazy (http://dinbror.dk/blazy/) que sirve para cargar las imagenes de forma progresiva al hacer scroll -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/blazy/1.8.2/blazy.min.js"></script>
+  <!-- Añadimos la libreria hammer.js para añadir eventos touch (en nuestro caso va a ser swipe para desplazar el menu en los móviles) -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
   <script type="text/javascript">
 
     // Mediante js comprobamos el ancho máximo de la ventana
@@ -100,6 +103,15 @@
     var $menu = document.getElementById('menu');
     function toggleMenu(){
       $menu.classList.toggle('active');
+    };
+
+
+    function showMenu(){
+      $menu.classList.add('active');
+    };
+
+    function hideMenu(){
+      $menu.classList.remove('active');
     };
 
     // Escucha cuando hay cambios en la ventana (resize) y ejecuta la función
@@ -122,6 +134,13 @@
     var bLazy = new Blazy({
         selector: 'img' // all images
     });
+
+    // Usamos la libreria hammerjs para implementar gestos en los móviles
+    var $body = document.body;
+    var gestos = new Hammer($body);
+    gestos.on('swipeleft', hideMenu);
+    gestos.on('swiperight', showMenu);
+
 
   </script>
 
