--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@
   <section id="guitarras" class="guitarras contenedor">
     <h2>Nuestras guitarras</h2>
     <div class="video-demo-contenedor">
+
       <div class="video-demo">
         <div class="video-responsive-contenedor">
           <!-- video de youtube -->
-          <iframe class="video-responsive-src" width="560" height="315" src="https://www.youtube.com/embed/uKje_EDAEKk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          <iframe class="video-responsive-src" width="560" height="315" src="https://www.youtube.com/embed/Fhrrv_F573c" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
     </div>
