--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Allerta|Montserrat:400,700" rel="stylesheet">
-  <link rel="stylesheet" href="css/app.css">
+
   <!-- viewport, es el area visible del navegador y necesitamos ponerla si trabajamos para varios dispositivos -->
   <!-- user-scalable=no impide que podamos hacer zoom en nuestro sitio con los dedos, se usa si nuestro sitio ya está
   adaptado a moviles y no es necesario hacer zoom con los dedos -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <!-- <link rel="stylesheet" media="(max-width: 800px)" href="css/media-querie.css"> -->
   <title>Invie - tus mejores guitarras!!</title>
+  <!-- Para mejorar la carga de la web metemos en style los estilos que se cargan en la página inicial (los generamos desde: https://jonassebastianohlsson.com/criticalpathcssgenerator/)
+  Y nos llevamos para el final la linea del app.css <link rel="stylesheet" href="css/app.css"> -->
+  <style>
+    @font-face{font-family:'icomoon';src:url('fonts/icomoon.eot?nvhrgq');src:url('fonts/icomoon.eot?nvhrgq#iefix') format('embedded-opentype'),url('fonts/icomoon.ttf?nvhrgq') format('truetype'),url('fonts/icomoon.woff?nvhrgq') format('woff'),url('fonts/icomoon.svg?nvhrgq#icomoon') format('svg');font-weight:normal;font-style:normal}[class*=" icon-"]{font-family:'icomoon'!important;speak:none;font-style:normal;font-weight:normal;font-variant:normal;text-transform:none;line-height:1;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}.icon-menu:before{content:"\e9bd"}body{font-family:'Allerta',sans-serif;margin:0}.contenedor{max-width:800px;margin:auto}.background{background-color:#466173;background-image:url('imagenes/background.png');background-size:cover}.titulo{font-size:70px;font-family:'Montserrat',sans-serif;margin-bottom:0;margin-top:70px}.titulo span{text-decoration:underline}.logotipo{display:inline-block;margin-left:0}.header{position:relative}.menu{font-size:24px;display:inline-block;position:absolute;right:0}.menu li{display:inline-block;margin-left:30px}.menu a{color:white;text-decoration:none}.portada{color:white;padding:20px;height:500px}.boton{border-radius:12px;border:none;background:#fd324e;color:white;text-decoration:none;padding:7px 12px;font-size:18px;background:linear-gradient(to left,#fe344e,#ff7250)}.guitarras{color:#1f313c;margin-bottom:60px}.guitarras h2{font-size:35px;font-family:'Montserrat',sans-serif}.tittle-a{font-size:24px;margin-top:0}.derecha{float:right;position:relative;top:-127px}.menu li:before{content:'∘';font-size:30px;color:white}.burger-button{width:40px;height:40px;line-height:40px;border-radius:50%;background:#395667;display:inline-block;text-align:center;color:white;position:fixed;top:20px;left:20px;z-index:3;display:none}.video-demo{max-width:500px;width:100%;border:5px solid #3c5b6e}.video-demo-contenedor{display:flex;justify-content:center;margin-bottom:80px}@media screen and (max-width:800px){.titulo{font-size:45px;margin-top:30px}.tittle-a{font-style:18px}.portada{height:auto}.portada .boton{margin-bottom:30px;display:inline-block}.guitarras{text-align:center}.derecha{float:none;position:static}.video-demo-contenedor{margin-bottom:30px}}@media screen and (max-width:650px){.logotipo{display:block;margin:0;text-align:center}.menu{position:static;display:block;text-align:center}.menu li:first-child{margin:0}.menu ul{padding:0}}@media screen and (max-width:500px){.burger-button{display:block}.portada .boton{display:block}.portada .contenedor{position:static}.header{position:static}.menu{background:rgba(255,60,88,.8);position:fixed;left:0;top:0;bottom:0;right:0;z-index:2;display:flex;align-items:center;width:100%;left:-100%}.menu ul{flex:1}.portada{text-align:center}.titulo{font-size:30px}.tittle-a{font-size:16px}.menu li{display:block;margin:0;padding:8px 0;border-bottom:1px solid white}.menu li:before{display:none}.menu li:first-child{border-top:1px solid white}.guitarra img{width:220px}.video-demo-contenedor{margin:0 10px 30px 10px}}.video-responsive-contenedor{position:relative;padding-top:56.25%}.video-responsive-src{position:absolute;left:0;right:0;top:0;bottom:0;width:100%;height:100%}
+  </style>
 </head>
 <body>
   <!-- Portada -->
@@ -160,14 +165,12 @@
     var bLazy = new Blazy({
         selector: 'img' // all images
     });
-
     // Usamos la libreria hammerjs para implementar gestos en los móviles
     var $body = document.body;
     var gestos = new Hammer($body);
     gestos.on('swipeleft', hideMenu);
     gestos.on('swiperight', showMenu);
-
   </script>
-
+  <link rel="stylesheet" href="css/app.css">
 </body>
 </html>
