--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Allerta|Montserrat:400,700" rel="stylesheet">
-
   <!-- viewport, es el area visible del navegador y necesitamos ponerla si trabajamos para varios dispositivos -->
   <!-- user-scalable=no impide que podamos hacer zoom en nuestro sitio con los dedos, se usa si nuestro sitio ya está
   adaptado a moviles y no es necesario hacer zoom con los dedos -->
@@ -121,6 +119,23 @@
       </form>
     </div>
   </footer>
+  <!-- Cargamos las fuentes de google de forma asyncrona para dar más velocidad a la carga de la web -->
+  <script type="text/javascript">
+    WebFontConfig = {
+      google: { families: [ 'Allerta:400:latin', 'Montserrat:400,700:latin' ] }
+    };
+    (function() {
+      var wf = document.createElement('script');
+      wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+        '://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js';
+      wf.type = 'text/javascript';
+      wf.async = 'true';
+      var s = document.getElementsByTagName('script')[0];
+      s.parentNode.insertBefore(wf, s);
+    })();
+  </script>
+
+
 
   <!-- Cargamos el js de bylazy (http://dinbror.dk/blazy/) que sirve para cargar las imagenes de forma progresiva al hacer scroll -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/blazy/1.8.2/blazy.min.js"></script>
